@@ -1,23 +1,0 @@
-languages
-{ de en }
-default
-{ de }
-files
-{
-	etc/default.callmonitor/callers.def
-	etc/default.callmonitor/listeners.def
-	usr/lib/callmonitor/actions.d/mail.sh
-	usr/lib/callmonitor/actions.d/messages.sh
-	usr/lib/callmonitor/applets/callmonitor.cgi.sh
-	usr/lib/callmonitor/applets/dump.cgi.sh
-	usr/lib/callmonitor/applets/exec.cgi.sh
-	usr/lib/callmonitor/applets/maint.cgi.sh
-	usr/lib/callmonitor/applets/reverse.cgi.sh
-	usr/lib/callmonitor/applets/testcall.cgi.sh
-	usr/lib/callmonitor/applets/testlookup.cgi.sh
-	usr/lib/callmonitor/modules/cgi.sh
-	usr/lib/callmonitor/modules/if_jfritz_cgi.sh
-	usr/lib/callmonitor/modules/message.sh
-	usr/lib/callmonitor/modules/modreg.sh
-	usr/lib/callmonitor/reverse/country.cfg
-}
