@@ -1,0 +1,8 @@
+languages
+{ de en }
+default
+{ de }
+files
+{
+    	@FILES@
+}
