@@ -696,3 +696,11 @@
 2009-08-30:
 
 	callmonitor-1.15.1
+
+	* Installation: Es können verschiedene Teilmengen der Callmonitor-
+	Funktionalität installiert werden:
+		
+	    webif	Web interface
+	    actions	Callmonitor actions (callable via 'callaction')
+	    monitor	Monitoring daemon 'callmonitor'
+	    phonebook	Phonebook support (and reverse lookup)
